ADD_SUBDIRECTORY(bootloader)
ADD_SUBDIRECTORY(nvm_qpc_example)
ADD_SUBDIRECTORY(nvm_unit_test)
ADD_SUBDIRECTORY(printf_example)
ADD_SUBDIRECTORY(rtc_example)
ADD_SUBDIRECTORY(adc_single_example)
ADD_SUBDIRECTORY(adc_continuous_example)
ADD_SUBDIRECTORY(qdec_example)
ADD_SUBDIRECTORY(ti_example)
ADD_SUBDIRECTORY(timer_example)
ADD_SUBDIRECTORY(spi_master_example)
ADD_SUBDIRECTORY(spi_slave_example)
ADD_SUBDIRECTORY(i2s_example)
ADD_SUBDIRECTORY(i2c_example)
ADD_SUBDIRECTORY(watchdog_example)
ADD_SUBDIRECTORY(nvm_emb_audio_control)
ADD_SUBDIRECTORY(nvm_emb_assettag)
ADD_SUBDIRECTORY(nvm_emb_controller)
ADD_SUBDIRECTORY(nvm_emb_datatransfer_client)
ADD_SUBDIRECTORY(nvm_emb_datatransfer_server)
ADD_SUBDIRECTORY(nvm_emb_ext_adv)
ADD_SUBDIRECTORY(nvm_emb_fit)
ADD_SUBDIRECTORY(nvm_emb_hrs)
ADD_SUBDIRECTORY(nvm_emb_lite_hrs)
ADD_SUBDIRECTORY(nvm_emb_power_control)
ADD_SUBDIRECTORY(nvm_emb_rpa)
ADD_SUBDIRECTORY(nvm_emb_tag)
ADD_SUBDIRECTORY(nvm_emsas_example)
ADD_SUBDIRECTORY(boot_selector)
ADD_SUBDIRECTORY(basic_app_tutorial)
ADD_SUBDIRECTORY(firmware_updater)
ADD_SUBDIRECTORY(nvm_fwu_target)
ADD_SUBDIRECTORY(nvm_emb_ancs_client)
